# wmcomplex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: complex.config.hpp.in
include/wm/: wmcomplex.hpp
include/wm/complex/: complex.hpp  multiops.hpp
src/: complex.cpp  multiops.cpp
src/tests/: CMakeLists.txt  helpers.hpp  wmcomplex_test_add.cpp  wmcomplex_test_div.cpp  wmcomplex_test_mul.cpp  wmcomplex_test_sub.cpp  wmcomplex_test_template.cpp
